--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,13 @@ plugins {
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '11.0.11'
+
+configurations{
+	compileOnly{
+		extendsFrom annotationProcessor
+	}
+}
 
 repositories {
 	mavenCentral()
