--- a/build.gradle
+++ b/build.gradle
@@ -22,20 +22,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
-	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.2'
-	// https://mvnrepository.com/artifact/eu.michael-simons/java-oembed
-	implementation group: 'eu.michael-simons', name: 'java-oembed', version: '0.8.1'
-	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
-	// https://mvnrepository.com/artifact/org.json/json
-	implementation group: 'org.json', name: 'json', version: '20210307'
-	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
-	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.3.Final'
+	implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.5.3.Final'
 
+
+	implementation group: 'eu.michael-simons', name: 'java-oembed', version: '0.8.1'
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
+	implementation group: 'org.json', name: 'json', version: '20210307'
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
 }
 
 test {
