흠.... 왜 안되는거지? The command './gradlew assemble' failed and exited with 1 during . <-- 문제점, openjdk8버전으로 수정 푸시

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 
 # java developer kit version
 jdk:
-  - openjdk11
+  - openjdk8
 
 # 어떤 git branch 에 push되면 작동할 것인가?
 branches:
@@ -17,8 +17,8 @@ before_install:
 # Travis CI 서버의 Home
 cache:
   directories:
-    - $HOME/.m2/repository
-    - $HOME/.gradle
+    - "$HOME/.m2/repository"
+    - "$HOME/.gradle"
 
 # script는 gradlew clean build 실행된다
 script:
