--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,8 @@ plugins {
 
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11.0.11'
+sourceCompatibility = '11'
 
-configurations{
-	compileOnly{
-		extendsFrom annotationProcessor
-	}
-}
 
 repositories {
 	mavenCentral()
@@ -21,8 +16,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
+	annotationProcessor('org.projectlombok:lombok')
 
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.2'
 	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.3.Final'
