travis before script add

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ cache:
     - "$HOME/.m2/repository"
     - "$HOME/.gradle"
 
+before_script:
+  - chmod +x gradlew
+
 # script는 gradlew clean build 실행된다
 script:
   - ./gradlew clean build
