--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.5.2'
+
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
 
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
