--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ branches:
 
 # gradle 권한주기
 before_install:
+  - openssl aes-256-cbc -K $encrypted_5c967de37745_key -iv $encrypted_5c967de37745_iv
+    -in application.tar.enc -out application.tar -d
+  - tar xvf application.tar
   - chmod +x gradlew
 
 # Travis CI 서버의 Home
