--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.5.2'
 
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
 
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
 	annotationProcessor('org.projectlombok:lombok')
