--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,22 @@
-# 언어
 language: java
-
-# java developer kit version
 jdk:
   - openjdk11
-
-# 어떤 git branch 에 push되면 작동할 것인가?
 branches:
   only:
     - master
-
-# gradle 권한주기
 before_install:
-  - openssl aes-256-cbc -K $encrypted_1116e8e6e492_key -iv $encrypted_1116e8e6e492_iv -in application.yml.enc -out application.yml -d
-  #  - tar xvf application.tar
+  - openssl aes-256-cbc -K $encrypted_5c967de37745_key -iv $encrypted_5c967de37745_iv
+    -in application.tar.enc -out application.tar -d
+  - tar xvf application.tar
   - chmod +x gradlew
-
-# Travis CI 서버의 Home
 cache:
   directories:
     - "$HOME/.m2/repository"
     - "$HOME/.gradle"
-
 before_script:
   - chmod +x gradlew
-
-# script는 gradlew clean build 실행된다
 script:
-  - ./gradlew clean build
-
-# CI 실행 완료시 메일로 알람
+  - "./gradlew clean build"
 notifications:
   email:
     recipients:
