--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ branches:
   only:
     - master
 before_install:
-  - openssl aes-256-cbc -K $encrypted_5c967de37745_key -iv $encrypted_5c967de37745_iv
-    -in application.tar.enc -out application.tar -d
-  - tar xvf application.tar
+  - openssl aes-256-cbc -K $encrypted_1116e8e6e492_key -iv $encrypted_1116e8e6e492_iv -in application.yml.enc -out application.yml -d
   - chmod +x gradlew
 cache:
   directories:
