--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
 language: java
 jdk:
-  - openjdk11
+- openjdk11
 branches:
   only:
-    - master
+  - master
 before_install:
-  - openssl aes-256-cbc -K $encrypted_1116e8e6e492_key -iv $encrypted_1116e8e6e492_iv -in application.yml.enc -out application.yml -d
-  - chmod +x gradlew
+- openssl aes-256-cbc -K $encrypted_1116e8e6e492_key -iv $encrypted_1116e8e6e492_iv
+  -in application.yml.enc -out application.yml -d
+- chmod +x gradlew
 cache:
   directories:
-    - "$HOME/.m2/repository"
-    - "$HOME/.gradle"
+  - "$HOME/.m2/repository"
+  - "$HOME/.gradle"
 before_script:
-  - chmod +x gradlew
+- chmod +x gradlew
 script:
-  - "./gradlew clean build"
+- "./gradlew clean build"
 notifications:
   email:
     recipients:
-      - kyungsik0907@gmail.com
+    - kyungsik0907@gmail.com
