--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,14 @@ notifications:
     recipients:
     - kyungsik0907@gmail.com
 deploy:
-        - provider: s3
-          access_key_id: $AWS-ACCESS_KEY # Travis repo settings에 설정된 값
-          secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
-          bucket: springboot-deploy-bucket # aws에서 생성한 버킷
-          region: ap-northeast-2
-          skip_cleanup: true
-          acl: public_read
-          wait-until-deployed: true
-          on:
-                  repo: kschoi93/spring-jpa-mysql-aws
-                  branch: master
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: springboot-deploy-bucket # aws에서 생성한 버킷
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: public_read
+    wait-until-deployed: true
+    on:
+      repo: kschoi93/spring-jpa-mysql-aws
+      branch: master
