travis 설정 추가, 모든 파일 zip 파일로 묶어서 보내기

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,11 @@ notifications:
   email:
     recipients:
     - kyungsik0907@gmail.com
+before_deploy:
+        - zip -r springboot-webservice *
+        - mkdir -p deploy
+        - mv springboot-webservice.zip deploy/springboot-webservice.zip
+
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
@@ -29,6 +34,7 @@ deploy:
     skip_cleanup: true
     acl: public_read
     wait-until-deployed: true
+    local_dir: deploy # before_deploy에서 생성한 디렉토리
     on:
       repo: kschoi93/spring-jpa-mysql-aws
       branch: master
